# kama-dbm

./: README.md  pyproject.toml
.github/workflows/: main.yml
src/kamadbm/: cli.py  command.py  extractor.py  importer.py  main.py  migrator.py
src/kamadbm/_pyinstaller_hooks/: hook-kamadbm.py
tests/: command.py  test_cli.py  test_command.py  test_extractor.py  test_importer.py  test_main.py  test_migrator.py
tests/_pyinstaller_hooks/: test_hook_kamadbm.py
